[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.15",
    "python-dotenv>=1.1.1",
    "python-telegram-bot==21.6",
    "telegram>=0.0.1",
    "validators>=0.35.0",
    "yt-dlp>=2025.8.22",
]
